@@ -181,6 +181,7 @@
 #define SWAPI_LINK_SPEED_MODE_FORCE_100_HD	(7)
 #define SWAPI_LINK_SPEED_MODE_FORCE_10_FD	(8)
 #define SWAPI_LINK_SPEED_MODE_FORCE_10_HD	(9)
+#define SWAPI_LINK_SPEED_MODE_FORCE_POWER_OFF	(15)
 
 #define SWAPI_LINK_FLOW_CONTROL_TX_RX		(0)
 #define SWAPI_LINK_FLOW_CONTROL_TX_ASYNC	(1)
